--- a/_output.yml
+++ b/_output.yml
@@ -3,10 +3,10 @@ bookdown::gitbook:
   config:
     toc:
       before: |
-        <li><a href="./">A Minimal Book Example</a></li>
+        <li><a href="./">Syllabus for 432 in Spring 2019</a></li>
       after: |
         <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
-    edit: https://github.com/rstudio/bookdown-demo/edit/master/%s
+    edit: https://github.com/thomaselove/2019-432-syllabus/edit/master/%s
     download: ["pdf", "epub"]
 bookdown::pdf_book:
   includes:
